# EasyDialogueEditor

./: .gitignore  .gitignore.bak  CMakeLists.txt  CMakeLists.txt.bak  LICENSE  README.md  vcpkg.json
dialogue_example/: README.txt  throne-example.json  throne_example.json
src/: CMakeLists.txt  CMakeLists.txt.bak  Node.h  Roboto-Medium.c  RobotoFont.hpp  Utils.h  Utils.h.bak  WindowsPlatformUtils.cpp  easy_dialog_editor.cpp  imgui_markdown.h  main.cpp  main.cpp.bak  show_windows.cpp  show_windows.h  storyteller.cpp
src/resources/: resource.aps
vendors/: CMakeLists.txt  CMakeLists.txt.bak
vendors/imgui/: CMakeLists.txt  CMakeLists.txt.bak
vendors/imnodes/: CMakeLists.txt  CMakeLists.txt.bak  imnodes.cpp  imnodes.h  imnodes_internal.h  node_editor.h
vendors/sdl/: CMakeLists.txt  CMakeLists.txt.bak
